--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # Server
 PORT=5000
-MONGO_URI=mongodb+srv://appuser:Appuser123@unified.7brumsk.mongodb.net/?appName=Unified
+MONGO_URI=mongodb+srv://appuser:AppUser12345@unified.vl85mcn.mongodb.net/?appName=Unified
 JWT_SECRET=change_me_super_secret
 JWT_EXPIRES_IN=7d
 CORS_ORIGIN=http://localhost:5173
